--- a/src/app/admin/fichas/components/crear-ficha/crear-ficha.component.scss
+++ b/src/app/admin/fichas/components/crear-ficha/crear-ficha.component.scss
@@ -1,12 +1,10 @@
 @media (min-width: 768px) {
     form {
-        display: flex;
-        flex-direction: column;
         width: 36%;
+    }
 
-        [nz-input] {
-            width: 300px
-        }
+    nz-transfer {
+        width: 100%;
     }
 
 }
