--- a/src/app/admin/nav/nav.component.scss
+++ b/src/app/admin/nav/nav.component.scss
@@ -84,3 +84,37 @@ nz-content {
     background: #fff;
     overflow-y: auto;
 }
+
+.app-footer {
+    text-align: center;
+    padding: 16px 24px;
+    background: #f0f2f5;
+    display: flex;
+}
+
+.footer-content {
+    color: #888;
+}
+
+// .loading-overlay {
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background: rgba(0, 0, 0, 0.5);
+//     text-align: center;
+//     z-index: 1000;
+// }
+
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
