--- a/src/app/admin/vehiculos/components/listar-vehiculo/listar-vehiculo.component.html
+++ b/src/app/admin/vehiculos/components/listar-vehiculo/listar-vehiculo.component.html
@@ -5,7 +5,7 @@
 </nz-spin>
 
 
-<nz-select nzShowSearch nzAllowClear nzPlaceHolder="Selecciona un cliente" [(ngModel)]="idCliente"
+<nz-select nzShowSearch nzPlaceHolder="Selecciona un cliente" [(ngModel)]="idCliente"
     (ngModelChange)="getVehiculosCliente()" *ngIf="clientes.length !== 0">
     <nz-option *ngFor="let cliente of clientes"
         [nzLabel]="cliente.usuario.nombres + ' ' + cliente.usuario.apellido_p + ' ' + cliente.usuario.apellido_m"
