--- a/src/app/admin/vehiculos/components/listar-vehiculo/listar-vehiculo.component.scss
+++ b/src/app/admin/vehiculos/components/listar-vehiculo/listar-vehiculo.component.scss
@@ -1,10 +1,15 @@
 nz-table {
-    margin-top: 20px;
+    margin-top: 15px;
     width: 100%;
 
     th {
         font-weight: bold;
         text-align: center;
+    }
+
+    td {
+        text-align: center;
+
     }
 }
 
