--- a/src/app/admin/fichas/components/crear-ficha/crear-ficha.component.scss
+++ b/src/app/admin/fichas/components/crear-ficha/crear-ficha.component.scss
@@ -1,12 +1,24 @@
 @media (min-width: 768px) {
+
     form {
-        width: 36%;
-    }
-
-    nz-transfer {
+        display: flex;
+        flex-direction: column;
         width: 100%;
-    }
+        max-width: 700px;
 
+        ::ng-deep nz-transfer .ant-transfer-list {
+            width: 100%;
+        }
+
+        #formularioFicha,
+        #formularioReparaciones {
+            max-width: 500px;
+        }
+
+        #formularioReparaciones nz-form-item {
+            max-width: 150px;
+        }
+    }
 }
 
 @media (max-width: 767px) {
