--- a/src/app/admin/nav/nav.component.scss
+++ b/src/app/admin/nav/nav.component.scss
@@ -32,7 +32,7 @@
 .sidebar-logo {
     position: relative;
     height: 64px;
-    padding-left: 24px;
+    padding-left: 5px;
     overflow: hidden;
     line-height: 64px;
     background: #001529;
@@ -96,15 +96,18 @@ nz-content {
     color: #888;
 }
 
-// .loading-overlay {
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background: rgba(0, 0, 0, 0.5);
-//     text-align: center;
-//     z-index: 1000;
-// }
+@media (max-width: 767px) {
+    .app-footer {
+        padding: 5px 19px;
+    }
+
+    .footer-content {
+        font-size: 12.2px;
+        color: #888;
+        text-align: left;
+    }
+
+}
 
 .loading-overlay {
     position: fixed;
