Agrego archivo para debbugger FIx: Agrego condicional para que la tabla sea más pequeña en dispositivos móvilles (creación e inyección de servicio ScreenService) Varias ajustes menores de diseño

--- a/src/app/admin/clientes/components/listar-cliente/listar-cliente.component.html
+++ b/src/app/admin/clientes/components/listar-cliente/listar-cliente.component.html
@@ -6,7 +6,7 @@
 
 <div nz-row *ngIf="paginaCargada">
     <nz-table nz-col #tablaClientes [nzData]="clientesFiltrados" [nzBordered]="true"
-        [nzScroll]="isSmallScreen ? { x: '1000px' } : {}">
+        [nzScroll]="isSmallScreen ? { x: '1000px' } : {}" [nzSize]="isSmallScreen ? 'small' : 'default'">
         <thead>
             <tr>
                 <th>Cédula</th>
