--- a/src/app/admin/nav/nav.component.scss
+++ b/src/app/admin/nav/nav.component.scss
@@ -1,3 +1,11 @@
+// _variables.scss
+$primary-color: #1890ff;
+$sidebar-bg: #001529;
+$header-height: 64px;
+$box-shadow-dark: rgba(0, 21, 41, 0.35);
+$box-shadow-light: rgba(0, 21, 41, 0.08);
+$mobile-breakpoint: 767px;
+
 :host {
     display: flex;
     text-rendering: optimizeLegibility;
@@ -14,60 +22,61 @@
     position: relative;
     z-index: 10;
     min-height: 100vh;
-    box-shadow: 2px 0 6px rgba(0, 21, 41, .35);
+    box-shadow: 2px 0 6px $box-shadow-dark;
 }
 
 .header-trigger {
-    height: 64px;
+    height: $header-height;
     padding: 20px 24px;
     font-size: 20px;
     cursor: pointer;
-    transition: all .3s, padding 0s;
-}
+    transition: all 0.3s, padding 0s;
 
-.trigger:hover {
-    color: #1890ff;
+    &:hover {
+        color: $primary-color;
+    }
 }
 
 .sidebar-logo {
     position: relative;
-    height: 64px;
-    padding-left: 5px;
+    height: $header-height;
+    padding-left: 24px;
     overflow: hidden;
-    line-height: 64px;
-    background: #001529;
-    transition: all .3s;
+    line-height: $header-height;
+    background: $sidebar-bg;
+    transition: all 0.3s;
+
+    img {
+        display: inline-block;
+        height: 32px;
+        width: 32px;
+        vertical-align: middle;
+    }
+
+    h1 {
+        display: inline-block;
+        margin-left: 20px;
+        color: #fff;
+        font-weight: 600;
+        font-size: 14px;
+        font-family: Avenir, Helvetica Neue, Arial, Helvetica, sans-serif;
+        vertical-align: middle;
+    }
+
+    @media (max-width: $mobile-breakpoint) {
+        padding-left: 5px;
+    }
 }
 
-.sidebar-logo img {
-    display: inline-block;
-    height: 32px;
-    width: 32px;
-    vertical-align: middle;
-}
-
-.sidebar-logo h1 {
-    display: inline-block;
-    margin: 0 0 0 20px;
-    color: #fff;
-    font-weight: 600;
-    font-size: 14px;
-    font-family: Avenir, Helvetica Neue, Arial, Helvetica, sans-serif;
-    vertical-align: middle;
-}
-
-nz-header {
+nz-header,
+.app-header {
     padding: 0;
     width: 100%;
     z-index: 2;
-}
-
-.app-header {
     position: relative;
-    height: 64px;
-    padding: 0;
+    height: $header-height;
     background: #fff;
-    box-shadow: 0 1px 4px rgba(0, 21, 41, .08);
+    box-shadow: 0 1px 4px $box-shadow-light;
 }
 
 nz-content {
@@ -75,7 +84,6 @@ nz-content {
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    //margin: 24px;
 }
 
 .inner-content {
@@ -83,6 +91,10 @@ nz-content {
     padding: 24px;
     background: #fff;
     overflow-y: auto;
+
+    @media (max-width: $mobile-breakpoint) {
+        padding: 10px;
+    }
 }
 
 .app-footer {
@@ -90,23 +102,19 @@ nz-content {
     padding: 16px 24px;
     background: #f0f2f5;
     display: flex;
-}
-
-.footer-content {
-    color: #888;
-}
-
-@media (max-width: 767px) {
-    .app-footer {
-        padding: 5px 19px;
-    }
 
     .footer-content {
-        font-size: 12.2px;
         color: #888;
-        text-align: left;
     }
 
+    @media (max-width: $mobile-breakpoint) {
+        padding: 5px 19px;
+
+        .footer-content {
+            font-size: 12.2px;
+            text-align: left;
+        }
+    }
 }
 
 .loading-overlay {
